feat:wrapper기능(test추가) swagger추가