@@ -5,11 +5,11 @@ import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import shop.chaekmate.core.order.dto.request.WrapperRequest;
+import shop.chaekmate.core.order.dto.request.WrapperDto;
 import shop.chaekmate.core.order.dto.response.WrapperResponse;
 import shop.chaekmate.core.order.entity.Wrapper;
 import shop.chaekmate.core.order.exception.InvalidWrapperPriceException;
-import shop.chaekmate.core.order.exception.WrapperAlreadyExistsException;
+import shop.chaekmate.core.order.exception.DuplicatedWrapperNameException;
 import shop.chaekmate.core.order.exception.WrapperNotFoundException;
 import shop.chaekmate.core.order.repository.WrapperRepository;
 
@@ -20,31 +20,30 @@ public class WrapperService {
 
     //포장지 이름, 가격 추가
     @Transactional
-    public WrapperResponse createWrapper(WrapperRequest wrapperRequest) {
-        if (wrapperRepository.existsByName(wrapperRequest.name())) {
-            throw new WrapperAlreadyExistsException(wrapperRequest.name());
+    public WrapperResponse createWrapper(WrapperDto wrapperDto) {
+        if (wrapperRepository.existsByName(wrapperDto.name())) {
+            throw new DuplicatedWrapperNameException(wrapperDto.name());
         }
-        Wrapper wrapper = new Wrapper(wrapperRequest.name(), wrapperRequest.price());
-        wrapperRepository.save(wrapper);
+        Wrapper wrapper = wrapperRepository.save(new Wrapper(wrapperDto.name(), wrapperDto.price()));
 
         return new WrapperResponse(wrapper.getId(), wrapper.getName(), wrapper.getPrice());
     }
 
     //포장지 수정(이름+가격)
     @Transactional
-    public WrapperResponse modifyWrapper(Long id, WrapperRequest wrapperRequest) {
+    public WrapperResponse modifyWrapper(Long id, WrapperDto wrapperDto) {
         Wrapper wrapper = wrapperRepository.findById(id).orElseThrow(() -> new WrapperNotFoundException(id));
 
-        if (wrapperRepository.existsByName(wrapperRequest.name())) {
-            throw new WrapperAlreadyExistsException(wrapperRequest.name());
+        if (!wrapper.getName().equals(wrapperDto.name())
+                && wrapperRepository.existsByName(wrapperDto.name())) {
+            throw new DuplicatedWrapperNameException(wrapperDto.name());
         }
 
-        if (wrapperRequest.price()<0) {
+        if (wrapperDto.price() < 0) {
             throw new InvalidWrapperPriceException();
         }
 
-        wrapper.updateWrapper(wrapperRequest.name(), wrapperRequest.price());
-        wrapperRepository.save(wrapper);
+        wrapper.updateWrapper(wrapperDto.name(), wrapperDto.price());
 
         return new WrapperResponse(wrapper.getId(), wrapper.getName(), wrapper.getPrice());
     }
@@ -52,24 +51,28 @@ public class WrapperService {
     //포장지 삭제
     @Transactional
     public void deleteWrapper(Long id) {
-        Wrapper wrapper = wrapperRepository.findById(id).orElseThrow(() -> new WrapperNotFoundException(id));
-        wrapperRepository.deleteById(wrapper.getId());
+        if (!wrapperRepository.existsById(id)) {
+            throw new WrapperNotFoundException(id);
+        }
+
+        wrapperRepository.deleteById(id);
     }
 
     //포장지 단일 조회
+    @Transactional(readOnly = true)
     public WrapperResponse getWrapperById(Long id) {
         Wrapper wrapper = wrapperRepository.findById(id).orElseThrow(() -> new WrapperNotFoundException(id));
         return new WrapperResponse(wrapper.getId(), wrapper.getName(), wrapper.getPrice());
     }
 
-
     //포장지 전체 조회
+    @Transactional(readOnly = true)
     public List<WrapperResponse> getWrappers() {
-         return wrapperRepository.findAll().stream()
-                 .map(wrapper -> new WrapperResponse(
-                         wrapper.getId(),
-                         wrapper.getName(),
-                         wrapper.getPrice()))
-                .collect(Collectors.toList());
+        return wrapperRepository.findAll().stream()
+                .map(wrapper -> new WrapperResponse(
+                        wrapper.getId(),
+                        wrapper.getName(),
+                        wrapper.getPrice()))
+                .toList();
     }
 }
